# not-so-tiny-apps

./: .pre-commit-config.yaml  readme.md
591-viewer/: README.md  devtools_chrome-itzzzme.js  pyproject.toml  spoof_shadow_root.js
591-viewer/fivenineone/: cli.py  data.py  deobfuscate.py  read_communities.py  shared.py
convert-images/: main.py  main.spec  pyproject.toml  utils.py
convert-images/convert_images/: gui.py  shared.py
convert-images/test/: test_utils.py
convert-images/testfiles/: dobatymo.psd
convert-images/tests/: test_shared.py
portscan/: README.md  pyproject.toml
portscan/portscanner/: cli.py  gui.py  shared.py
portscan/tests/: test_shared.py
