[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=61" ]

[project]
name = "portscanner"
version = "0.1.0"
description = "A simple port scanner with CLI and GUI interfaces."
readme = "README.md"
license = { text = "MPL-2.0" }
authors = [
  { name = "Dobatymo" },
]
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "genutility[callbacks,iter,rich]>=0.0.114",
  "pyside6",
  "rich",
  "scapy>=2.6.1",
]
scripts.portscanner-cli = "portscanner.cli:main"
scripts.portscanner-gui = "portscanner.gui:main"

[dependency-groups]
dev = [
  "pyinstaller>=6.14.2",
  "pytest>=8.3.5",
]

[tool.setuptools]
packages = [ "portscanner" ]

[tool.ruff]
line-length = 120
lint.extend-select = [
  "ASYNC",
  "B",
  "I",
  "ICN",
  "LOG",
  "NPY",
  "PIE",
  "PLE",
  "SIM",
  "W",
]
lint.ignore = [ "B011" ]
